--- a/app/src/main/res/layout/activity_fight_search.xml
+++ b/app/src/main/res/layout/activity_fight_search.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:background="#3a6d99">
 
     <pl.droidsonroids.gif.GifImageView
             android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:text="@string/title_search_fight"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" android:textColor="#FFFFFF" android:textSize="24sp"/>
 
 
 </LinearLayout>
