--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -23,13 +23,14 @@
 
     <TextView
             android:text="@string/fight_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_fight"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="340dp" android:layout_marginStart="84dp" android:textSize="36sp"
+            android:layout_width="408dp"
+            android:layout_height="49dp" android:id="@+id/text_fight"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="340dp" android:textSize="36sp"
             android:textColor="@android:color/white" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.002"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.002" android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
